# rustgb

./: .gitignore  Cargo.toml  README.md
src/: apu.rs  arithmetic.rs  cpu.rs  disassembler.rs  isa.rs  joypad.rs  lib.rs  main.rs  memory.rs  ppu.rs  serial.rs  timer.rs  ui.rs
tests/: cpu_batch.rs
tests/common/: util.rs
