[package]
name = "rustgb"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
log = "0.4.22"
env_logger = "0.11.5"
eframe = "0.29.1"
egui_extras = "0.29.1"
#profiling = { version = "1.0.13", features = ["profile-with-puffin"] }
puffin_http = "0.16.1"
puffin = "0.19.1"

[dev-dependencies]
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
